# sorting-comparison-parallel-serial

./: CMakeLists.txt  README.md  main.cpp
sortingAlgos/: bubbleSort.cpp  bubbleSort.h  bucketSort.cpp  bucketSort.h  insertionSort.cpp  insertionSort.h  mergeSort.cpp  mergeSort.h  quickSort.cpp  quickSort.h
utils/: arrayUtils.cpp  arrayUtils.h
